--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Font awesome icons -->
+    <script src="https://kit.fontawesome.com/ff860d439e.js" crossorigin="anonymous"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="animations.css" />
@@ -12,7 +14,6 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/ff860d439e.js" crossorigin="anonymous"></script>
     <title>Patrick Murphy</title>
   </head>
   <body>
@@ -118,5 +119,43 @@
     </section>
     <script src="javascript.js"></script>
     <script src="scrollAnimations.js"></script>
+    <section class="section section--web">
+      <div class="container container--center">
+        <div class="web__grid">
+          <div class="project__item-grid">
+            <img class="project__img project__item-grid--full-column" src="self-photo.jpg"/>
+            <div class="project__text-container">
+              <p class="project__text project__text--title">TITLE</p>
+              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              </p>
+            </div>
+          </div>
+          <div class="project__item-grid">
+            <img class="project__img project__item-grid--full-column" src="self-photo.jpg"/>
+            <div class="project__text-container">
+              <p class="project__text project__text--title">TITLE</p>
+              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              </p>
+            </div>
+          </div>
+          <div class="project__item-grid">
+            <img class="project__img project__item-grid--full-column" src="self-photo.jpg"/>
+            <div class="project__text-container">
+              <p class="project__text project__text--title">TITLE</p>
+              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              </p>
+            </div>
+          </div>
+          <div class="project__item-grid">
+            <img class="project__img project__item-grid--full-column" src="self-photo.jpg"/>
+            <div class="project__text-container">
+              <p class="project__text project__text--title">TITLE</p>
+              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
