Contrast & Alt tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Patrick Murphy is a web developer and game developer from Aurora, Ontario. Work with me today!"/>
     <!-- Font awesome icons -->
     <script src="https://kit.fontawesome.com/ff860d439e.js" crossorigin="anonymous"></script>
     <!-- CSS -->
@@ -42,7 +43,7 @@
       <div class="container container--center">
         <div class="about__outer-grid">
           <div class="about__left-grid slide-in-left animate-on-scroll">
-            <img class="about__img" src="./self-photo.jpg">
+            <img class="about__img" src="./self-photo.jpg" alt="A picture of the creator of this site, Patrick Murphy.">
             <p>
               I’m a front-end web developer from Aurora, ON.
   I enjoy building fast, responsive, and accessible websites. I love solving problems, and learning new things.
@@ -123,7 +124,7 @@
       <div class="container container--center">
         <div class="web__grid">
           <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #1" src="self-photo.jpg"/>
             <div class="project__text-container">
               <p class="project__text project__text--title">TITLE</p>
               <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
@@ -131,7 +132,7 @@
             </div>
           </div>
           <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #2" src="self-photo.jpg"/>
             <div class="project__text-container">
               <p class="project__text project__text--title">TITLE</p>
               <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
@@ -139,7 +140,7 @@
             </div>
           </div>
           <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #3" src="self-photo.jpg"/>
             <div class="project__text-container">
               <p class="project__text project__text--title">TITLE</p>
               <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
@@ -147,7 +148,7 @@
             </div>
           </div>
           <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #4" src="self-photo.jpg"/>
             <div class="project__text-container">
               <p class="project__text project__text--title">TITLE</p>
               <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
