Game section outline

--- a/index.html
+++ b/index.html
@@ -158,5 +158,43 @@
         </div>
       </div>
     </section>
+    <section class="section section--game">
+      <div class="container container--center">
+        <div class="web__grid">
+          <div class="project__item-grid project__item-grid--light">
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #1" src="self-photo.jpg"/>
+            <div class="project__text-container">
+              <p class="project__text project__text--title project__text--title-dark">TITLE</p>
+              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              </p>
+            </div>
+          </div>
+          <div class="project__item-grid project__item-grid--light">
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #2" src="self-photo.jpg"/>
+            <div class="project__text-container">
+              <p class="project__text project__text--title project__text--title-dark">TITLE</p>
+              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              </p>
+            </div>
+          </div>
+          <div class="project__item-grid project__item-grid--light">
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #3" src="self-photo.jpg"/>
+            <div class="project__text-container">
+              <p class="project__text project__text--title project__text--title-dark">TITLE</p>
+              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              </p>
+            </div>
+          </div>
+          <div class="project__item-grid project__item-grid--light">
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #4" src="self-photo.jpg"/>
+            <div class="project__text-container">
+              <p class="project__text project__text--title project__text--title-dark">TITLE</p>
+              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
