Web dev projects image + descriptions

--- a/index.html
+++ b/index.html
@@ -122,37 +122,30 @@
       <div class="container container--center">
         <div class="web__grid">
           <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #1" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #1" src="mh_tools_small.png"/>
             <div class="project__text-container">
-              <p class="project__text project__text--title">TITLE</p>
-              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              <p class="project__text project__text--title"><a class="project__link" href="https://pmurph0305.github.io/MHToolsFrontend/#/" target="_blank">MH Tools</a></p>
+              <p class="project__text">A website with various tools to help manage, cope, and track mental health issues. Created with React + Redux, Express, Node, and Postgres. Deployed on Heroku.
               </p>
             </div>
           </div>
           <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #2" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #2" src="pathfinding_small.png"/>
             <div class="project__text-container">
-              <p class="project__text project__text--title">TITLE</p>
-              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              <p class="project__text project__text--title"><a class="project__link" href="https://pmurph0305.github.io/Pathfinding-demo/" target="_blank">Pathfinding</a></p>
+              <p class="project__text">A project to demonstrate how A* and Djikstra's Pathfinding algorithms work. Created with React, and deployed on Github Pages.
               </p>
             </div>
           </div>
-          <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #3" src="self-photo.jpg"/>
+          <div class="project__item-grid project__item--full-center">
+            <img class="project__img project__item-grid--full-column" alt="Image of Project #3" src="moodtracker_small.png"/>
             <div class="project__text-container">
-              <p class="project__text project__text--title">TITLE</p>
-              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              <p class="project__text project__text--title"><a class="project__link" href="https://github.com/pmurph0305/RN_MoodTracker" target="_blank">Mood Tracker</a></p>
+              <p class="project__text">A work in progress application to help people track which activities improve their mood over time. Created with React Native + Expo + SQLite
               </p>
             </div>
           </div>
-          <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #4" src="self-photo.jpg"/>
-            <div class="project__text-container">
-              <p class="project__text project__text--title">TITLE</p>
-              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
-              </p>
-            </div>
-          </div>
+      
         </div>
       </div>
     </section>
