Game development projects description and images

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="container container--center">
         <div class="web__grid">
           <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #1" src="mh_tools_small.png"/>
+            <img class="project__img project__item-grid--full-column" alt="MHTools screenshot" src="mh_tools_small.png"/>
             <div class="project__text-container">
               <p class="project__text project__text--title"><a class="project__link" href="https://pmurph0305.github.io/MHToolsFrontend/#/" target="_blank">MH Tools</a></p>
               <p class="project__text">A website with various tools to help manage, cope, and track mental health issues. Created with React + Redux, Express, Node, and Postgres. Deployed on Heroku.
@@ -130,7 +130,7 @@
             </div>
           </div>
           <div class="project__item-grid">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #2" src="pathfinding_small.png"/>
+            <img class="project__img project__item-grid--full-column" alt="Pathfinding screenshot" src="pathfinding_small.png"/>
             <div class="project__text-container">
               <p class="project__text project__text--title"><a class="project__link" href="https://pmurph0305.github.io/Pathfinding-demo/" target="_blank">Pathfinding</a></p>
               <p class="project__text">A project to demonstrate how A* and Djikstra's Pathfinding algorithms work. Created with React, and deployed on Github Pages.
@@ -138,7 +138,7 @@
             </div>
           </div>
           <div class="project__item-grid project__item--full-center">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #3" src="moodtracker_small.png"/>
+            <img class="project__img project__item-grid--full-column" alt="Moodtracker screenshot" src="moodtracker_small.png"/>
             <div class="project__text-container">
               <p class="project__text project__text--title"><a class="project__link" href="https://github.com/pmurph0305/RN_MoodTracker" target="_blank">Mood Tracker</a></p>
               <p class="project__text">A work in progress application to help people track which activities improve their mood over time. Created with React Native + Expo + SQLite
@@ -153,34 +153,34 @@
       <div class="container container--center">
         <div class="web__grid">
           <div class="project__item-grid project__item-grid--light">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #1" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Easy Collider Editor screenshot" src="ece_200.png"/>
             <div class="project__text-container">
-              <p class="project__text project__text--title project__text--title-dark">TITLE</p>
-              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              <p class="project__text project__text--title project__text--title-dark"><a class="project__link" href="https://assetstore.unity.com/packages/tools/utilities/easy-collider-editor-67880" target="_blank">Easy Collider Editor</a></p>
+              <p class="project__text">Designed to make the creation of 3d primitive colliders easier in Unity. Uses vertex selection tools to generate primitive colliders that perfectly fit the mesh. Available on the Unity Asset Store.
               </p>
             </div>
           </div>
           <div class="project__item-grid project__item-grid--light">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #2" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Mass Calculator screenshot" src="mfp_small.png"/>
             <div class="project__text-container">
-              <p class="project__text project__text--title project__text--title-dark">TITLE</p>
-              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              <p class="project__text project__text--title project__text--title-dark"><a class="project__link" href="https://assetstore.unity.com/packages/tools/physics/mass-calculator-from-physic-material-68514" target="_blank">Mass Calculator</a></p>
+              <p class="project__text">Calculates mass for Rigidbodies from attached colliders and Physic Materials or simple material enums. Also allows for mass calculation from all mesh vertices. Available on the Unity Asset Store.
               </p>
             </div>
           </div>
           <div class="project__item-grid project__item-grid--light">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #3" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Unity plant pack screenshot" src="unity_plants_small.png"/>
             <div class="project__text-container">
-              <p class="project__text project__text--title project__text--title-dark">TITLE</p>
-              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              <p class="project__text project__text--title project__text--title-dark"><a class="project__link" href="https://assetstore.unity.com/publishers/22753" target="_blank">Unity Plant Packs</a></p>
+              <p class="project__text">Plant asset packages created using 3dsmax, photoshop, and a PBR workflow. Available on the Unity Asset Store.
               </p>
             </div>
           </div>
           <div class="project__item-grid project__item-grid--light">
-            <img class="project__img project__item-grid--full-column" alt="Image of Project #4" src="self-photo.jpg"/>
+            <img class="project__img project__item-grid--full-column" alt="Unreal engine 4 plant pack screenshot" src="ue4_plants_small.png"/>
             <div class="project__text-container">
-              <p class="project__text project__text--title project__text--title-dark">TITLE</p>
-              <p class="project__text">Description of project. A website that does something cool. Build using some technologies like React, express, mongo. Deployed on heroku.
+              <p class="project__text project__text--title project__text--title-dark"><a class="project__link" href="https://www.unrealengine.com/marketplace/en-US/profile/Patrick+Murphy" target="_blank">UE4 Plant Packs</a></p>
+              <p class="project__text">Plant asset packages created using 3dsmax, photoshop, and a PBR workflow. Uses a custom material created for UE4. Available on the Unreal Engine 4 Marketplace.
               </p>
             </div>
           </div>
