remove large images

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="container container--center">
         <div class="web__grid">
           <div class="project__item-grid project__item-grid--light">
-            <img class="project__img project__item-grid--full-column" alt="Easy Collider Editor screenshot" src="ece_200.png"/>
+            <img class="project__img project__item-grid--full-column" alt="Easy Collider Editor screenshot" src="ece_small.png"/>
             <div class="project__text-container">
               <p class="project__text project__text--title project__text--title-dark"><a class="project__link" href="https://assetstore.unity.com/packages/tools/utilities/easy-collider-editor-67880" target="_blank">Easy Collider Editor</a></p>
               <p class="project__text">Designed to make the creation of 3d primitive colliders easier in Unity. Uses vertex selection tools to generate primitive colliders that perfectly fit the mesh. Available on the Unity Asset Store.
