Expand about text, split skills like into 2 columns

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <div class="about__left-grid slide-in-left animate-on-scroll">
             <img class="about__img" src="./self-photo.jpg" alt="A picture of the creator of this site, Patrick Murphy.">
             <p>
-              I’m a front-end web developer from Aurora, ON.
+              I’m a programmer from Aurora, ON.<br><br>
   I enjoy building fast, responsive, and accessible websites. I love solving problems, and learning new things.
             </br></br>
-  I know I don’t know everything, but I know that I can figure it out. 
+  I also enjoy building tools and assets to help people with game development.
             </p>
             <div class="about__lists">
               <ul class="ul-flat">
@@ -64,7 +64,7 @@
                   Full Stack Certification
                 </li>
               </ul>
-              <ul class="ul-flat">
+              <ul class="ul-flat ul-flat--split">
                 <li class="li-title">
                   SKILLS
                 </li>
@@ -88,6 +88,12 @@
                 </li>
                 <li class="li-item">
                   SQL Databases
+                </li>
+                <li class="li-item">
+                  C#
+                </li>
+                <li class="li-item">
+                  Unity + UE4
                 </li>
               </ul>
             </div>
@@ -120,6 +126,7 @@
     </section>
     <section class="section section--web">
       <div class="container container--center">
+        <h1 class="section__title">Web Development</h1>
         <div class="web__grid">
           <div class="project__item-grid">
             <img class="project__img project__item-grid--full-column" alt="MHTools screenshot" src="mh_tools_small.png"/>
@@ -151,6 +158,7 @@
     </section>
     <section class="section section--game">
       <div class="container container--center">
+        <h1 class="section__title">Game Development</h1>
         <div class="web__grid">
           <div class="project__item-grid project__item-grid--light">
             <img class="project__img project__item-grid--full-column" alt="Easy Collider Editor screenshot" src="ece_small.png"/>
