Modifications to landing tag line & about description

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           Hello, I'm
           <span class="landing__title--colored">Patrick Murphy</span>.
           <br />
-          I'm a web developer.
+          I love programming.
         </p>
         <button
           class="btn btn--large btn--inner-shadow"
@@ -45,7 +45,7 @@
           <div class="about__left-grid slide-in-left animate-on-scroll">
             <img class="about__img" src="./self-photo.jpg" alt="A picture of the creator of this site, Patrick Murphy.">
             <p>
-              I’m a programmer from Aurora, ON.<br><br>
+              I’m a web and game developer from Aurora, ON.<br><br>
   I enjoy building fast, responsive, and accessible websites. I love solving problems, and learning new things.
             </br></br>
   I also enjoy building tools and assets to help people with game development.
