Add small contact section at bottom

--- a/index.html
+++ b/index.html
@@ -198,4 +198,10 @@
     <script src="javascript.js"></script>
     <script src="scrollAnimations.js"></script>
   </body>
+  <footer class="footer">
+    <p class="contact-container">
+      pmurph0305@gmail.com <br><br>
+      <a class="contact-link" href = "mailto: pmurph0305@gmail.com">Contact me, let's work together.</a>
+    </p>
+  </footer>
 </html>
