--- a/index.html
+++ b/index.html
@@ -200,8 +200,11 @@
   </body>
   <footer class="footer">
     <p class="contact-container">
-      pmurph0305@gmail.com <br><br>
+      pmurph0305@gmail.com 
+      <br><br>
       <a class="contact-link" href = "mailto: pmurph0305@gmail.com">Contact me, let's work together.</a>
+      <br><br>
+      <a class="contact-link" href="PmurphGames/index.html">Presskit</a>
     </p>
   </footer>
 </html>
