add games section w/golfinite

--- a/index.html
+++ b/index.html
@@ -195,6 +195,23 @@
         </div>
       </div>
     </section>
+
+    <section class="section section--web">
+      <div class="container container--center">
+        <h1 class="section__title">Games</h1>
+          <div class="web__grid--1">
+            <div class="project__item-grid">
+              <img class="project__item-grid project__item--full-center" alt="Golfinite Screenshot" src="golfinite_vertical.png"/>
+              <div class="project__text-container">
+                <p class="project__text project__text--title"><a class="project__link" href="https://pmurph0305.github.io/PmurphGames/Golfinite/index.html" target="_blank">Golfinite</a></p>
+                <p class="project__text">A golf rpg game with procedurally generated courses and challenges. Unlock abilities and tech and progress through several regions to become a golf pro.
+                </p>
+              </div>
+            </div>
+          </div>
+      </div>
+    </section>
+
     <script src="javascript.js"></script>
     <script src="scrollAnimations.js"></script>
   </body>
